--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -34,7 +34,7 @@ jobs:
         IMAGE_TAG: latest
       run: |
         # Build the Docker image
-        docker build -t $ECR_REPOSITORY:$IMAGE_TAG ../app/
+        docker build "app" -f app/Dockerfile -t $ECR_REPOSITORY:$IMAGE_TAG
 
         # Tag the image for ECR
         docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
