--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: Build, tag, and push image to ECR
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: "public.ecr.aws/c0v8s4a9"
         ECR_REPOSITORY: "transactionapi"
         IMAGE_TAG: latest
       run: |
