--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -21,20 +21,19 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
+        aws-region: us-east-1
         
-    - name: Log in to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
-      
     - name: Build, tag, and push image to ECR
       env:
         ECR_REGISTRY: "public.ecr.aws/c0v8s4a9"
         ECR_REPOSITORY: "transactionapi"
         IMAGE_TAG: latest
       run: |
+        #docker login
+        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/c0v8s4a9
+
         # Build the Docker image
-        docker build "app" -f app/Dockerfile -t $ECR_REPOSITORY:$IMAGE_TAG
+        docker build "app" -f "app/Dockerfile" -t $ECR_REPOSITORY:$IMAGE_TAG
 
         # Tag the image for ECR
         docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
