--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -53,4 +53,4 @@ jobs:
       run: aws eks update-kubeconfig --name external-secrets --region us-west-2
 
     - name: "Deploy to EKS"
-      run : kubectl apply -f K8s/app-deployment.yml
+      run : kubectl apply -f k8s/app_deployment.yml
