--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get update \
     && apt-get -y install libpq-dev gcc \
     && pip install psycopg2
 
-# Install the dependencies
+# Install the dependencies.
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
