Updated Readme with thoughts for future and fixed ClusterSecretStore Sync error

--- a/k8s/secret.yml
+++ b/k8s/secret.yml
@@ -5,6 +5,6 @@ metadata:
   namespace: external-secrets
 type: Opaque
 data:
-  POSTGRES_USER: cG9zdGdyZXM=  # postgres (base64 encoded)
-  POSTGRES_PASSWORD: bXlwYXNzd29yZA== # mypassword (base64 encoded)
-  POSTGRES_DB: dHJhbnNhY3Rpb25z # transactions (base64 encoded)
+  POSTGRES_USER: cG9zdGdyZXM=
+  POSTGRES_PASSWORD: bXlwYXNzd29yZA==
+  POSTGRES_DB: dHJhbnNhY3Rpb25z
