--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .terraform
-terraform.tfstate.*
-terraform.lock.*
+terraform.tfstate*
+.terraform.lock.*
 .venv
 
 # Byte-compiled / optimized / DLL files
